--- a/AStar/AStar.vcxproj.filters
+++ b/AStar/AStar.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClInclude Include="Window.h">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="Grid.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Window.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Grid.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
